[package]
name = "oxidefetch"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
colored = "2.0.0"
compound_duration = "1.2.0"
quoted-string = "0.6.1"
sysinfo = "0.27.2"
whoami = "1.3.0"
