[package]
name = "oxidefetch"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.18"
chrono = "0.4.23"
colored = "2.0.0"
compound_duration = "1.2.0"
lazy_static = "1.4.0"
quoted-string = "0.6.1"
sysinfo = "0.28.1"
whoami = "1.3.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
field-titles = []
