[package]
name = "oxidefetch"
description = "A fast, cross platform Fetch program for your terminal"
version = "1.4.7"
edition = "2021"
authors = [ "NamedNeon", "shibedrill" ]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.18"
chrono = "0.4.23"
colored = "2.0.0"
compound_duration = "1.2.0"
lazy_static = "1.4.0"
quoted-string = "0.6.1"
ron = "0.8.1"
sysinfo = "0.29.1"
whoami = "1.3.0"

[dependencies.serde]
version = "1.0.192"
features = ["derive"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
field-titles = []